# PlainChat

./: .gitignore  README.md  pyproject.toml
src/plainchat/: __init__.py  app_facade.py  run_standalone.py
src/plainchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plainchat/backend/: __init__.py  models.py  service.py  storage.py
src/plainchat/ui/: __init__.py  app.py
src/plainchat/ui/views/: __init__.py  dialog.py  home.py
tests/: run_plainchat.py
